[gd_scene load_steps=17 format=3 uid="uid://bdfni6sjn8v2g"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_lgess"]
[ext_resource type="Texture2D" uid="uid://b4qsam0b5r2qv" path="res://assets/titlescreen/title_screen.png" id="2_ljkto"]
[ext_resource type="Texture2D" uid="uid://qkwignkbpugi" path="res://assets/titlescreen/start.png" id="3_v4y4s"]
[ext_resource type="Texture2D" uid="uid://nuqu7x07de0a" path="res://assets/titlescreen/Settings.png" id="4_33yx3"]
[ext_resource type="AudioStream" uid="uid://crkridwrg1dl0" path="res://assets/SFX/OST - saunatitle (loopable).mp3" id="4_kra35"]
[ext_resource type="PackedScene" uid="uid://bd4d5slauclpo" path="res://Scripts/volume_slider.tscn" id="5_3p4xw"]
[ext_resource type="Texture2D" uid="uid://noahbgxu5i8s" path="res://assets/titlescreen/exit.png" id="5_cynq0"]
[ext_resource type="AudioStream" uid="uid://cy3lke5kc376g" path="res://assets/SFX/UI_select.mp3" id="11_oqsmx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egyg5"]
bg_color = Color(0.745098, 0.552941, 0.435294, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nvyv3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fm2jf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vt6nh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uab3"]

[sub_resource type="Theme" id="Theme_7vt5s"]

[sub_resource type="Theme" id="Theme_7fwsv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3kptt"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lgess")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1234.29
offset_bottom = 671.0
texture = ExtResource("2_ljkto")
expand_mode = 3
stretch_mode = 4

[node name="start" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -453.0
offset_top = 185.0
offset_right = -269.0
offset_bottom = 255.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_egyg5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_nvyv3")
icon = ExtResource("3_v4y4s")
flat = true
icon_alignment = 1
expand_icon = true

[node name="tutorial" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 402.0
offset_top = -297.5
offset_right = 586.0
offset_bottom = -227.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_egyg5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_fm2jf")
text = "?"
flat = true
icon_alignment = 1
expand_icon = true

[node name="Panel" type="Panel" parent="tutorial"]
visible = false
layout_mode = 0
offset_left = -595.0
offset_top = 128.0
offset_right = -50.0
offset_bottom = 454.0

[node name="Label" type="Label" parent="tutorial/Panel"]
layout_mode = 0
offset_left = -2.0
offset_right = 545.0
offset_bottom = 328.0
text = "TUTORIAL


You are going to a sauna with a renowned Finnish man.
To impress him, you have to prepare sauna items
and prove you are worthy of his sauna.


CLICK to pick up and drop ingredients to craft the ideal leil. 


Match his tastes and pass his judgment to get to his sauna."
horizontal_alignment = 1

[node name="Settings" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.501
anchor_right = 0.5
anchor_bottom = 0.501
offset_left = -486.0
offset_top = -39.149
offset_right = -237.0
offset_bottom = 38.851
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_vt6nh")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8uab3")
icon = ExtResource("4_33yx3")
flat = true
expand_icon = true

[node name="Panel" type="Panel" parent="Settings"]
visible = false
layout_mode = 0
offset_left = 142.0
offset_top = -153.0
offset_right = 885.0
offset_bottom = 298.0
theme = SubResource("Theme_7vt5s")

[node name="CheckButton" type="CheckButton" parent="Settings/Panel"]
layout_mode = 0
offset_left = 291.0
offset_top = 195.0
offset_right = 418.0
offset_bottom = 226.0
text = "Fullscreen"

[node name="välju" type="Button" parent="Settings/Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 646.0
offset_top = 21.0
offset_right = 704.0
offset_bottom = 64.0
theme = SubResource("Theme_7fwsv")
text = "Back"

[node name="master" parent="Settings/Panel" instance=ExtResource("5_3p4xw")]
layout_mode = 0
offset_left = 200.0
offset_top = 118.0
offset_right = 516.0
offset_bottom = 134.0
step = 0.001
value = 1.0
bus_name = "Master"

[node name="Label" type="Label" parent="Settings/Panel/master"]
layout_mode = 0
offset_left = 131.0
offset_top = -28.0
offset_right = 176.0
offset_bottom = -5.0
text = "Audio"

[node name="SFX" parent="Settings/Panel" instance=ExtResource("5_3p4xw")]
visible = false
layout_mode = 0
offset_left = 200.0
offset_top = 208.0
offset_right = 518.0
offset_bottom = 224.0
max_value = 0.0
bus_name = "SFX"

[node name="Music" parent="Settings/Panel" instance=ExtResource("5_3p4xw")]
visible = false
layout_mode = 0
offset_left = 204.0
offset_top = 285.0
offset_right = 512.0
offset_bottom = 301.0
bus_name = "Music"

[node name="exit" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -435.0
offset_top = -236.0
offset_right = -299.0
offset_bottom = -183.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_egyg5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3kptt")
icon = ExtResource("5_cynq0")
flat = true
icon_alignment = 1
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_kra35")
autoplay = true

[node name="tutorialpanel" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 488.0
offset_top = 120.0
offset_right = 904.0
offset_bottom = 632.0

[node name="Label" type="Label" parent="tutorialpanel"]
layout_mode = 0
offset_left = 48.0
offset_top = 88.0
offset_right = 382.0
offset_bottom = 384.0
theme_override_font_sizes/font_size = 15
text = "

TO WIN DUCK WHEN JYRKI THROWS

TO DEFEAT THROW HARD LEIL WITH 

YOU CAN ALSO REPLENISH YOUR HEALTH
AND STAMINA WITH DRINKING BEER 
BE CAREFUL WHEN ALCOHOL METER GOES
FULL YOU LOSE CONSCIOUSNESS!
"

[node name="Label2" type="Label" parent="tutorialpanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 80.0
offset_right = 346.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.603922, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
text = "TO WIN YOU HAVE TO DEFEAT JYRKI
IN SAUN STANDOFF."

[node name="control" type="Label" parent="tutorialpanel"]
layout_mode = 0
offset_left = 312.0
offset_top = 136.0
offset_right = 371.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "(SPACE)"

[node name="control2" type="Label" parent="tutorialpanel"]
layout_mode = 0
offset_left = 310.0
offset_top = 188.0
offset_right = 369.0
offset_bottom = 214.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "(R)"

[node name="control3" type="Label" parent="tutorialpanel"]
layout_mode = 0
offset_left = 315.0
offset_top = 264.0
offset_right = 374.0
offset_bottom = 290.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "(E)"

[node name="vajutus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_oqsmx")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 158.0
offset_top = 542.0
offset_right = 198.0
offset_bottom = 582.0

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="tutorial" to="." method="_on_toutorial_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Settings/Panel/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="Settings/Panel/välju" to="." method="_on_välju_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
